# ompl-rs

./: .gitignore  Cargo.toml  README.md  build.rs  pixi.toml
src/: input.h  main.rs
